# verilua

./: .emmyrc-lsp-check.json  .emmyrc.json  .gitignore  .gitmodules  .luarc.json  .luayrc.json  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  TODO  activate_verilua.sh  apply_xmake_patch.sh  boost_unordered.nix  conanfile.py  default.nix  index.html  install.sh  install_libs.sh  install_lua.sh  install_lua_modules.sh  install_wave_vpi.sh  iverilog.nix  lua-vpi.nix  lua_vpi.nix  luafmt.config  luafun.nix  meta.lua  mkdocs.yml  pixi.toml  pixi_env_setup.sh  pyslang.nix  requirements.txt  search-index.json  setup_verilua.sh  (+12 more)
.github/: filters.yml
.github/workflows/: benchmark.yml  ci.yml  regression.yml  release.yml  test.yml
assets/css/: styles.05755b1f.css  styles.b7591dbf.css  styles.bc66b8d3.css
assets/js/: 02cb530d.7e15078e.js  0d7e8a6a.27cae6bc.js  0d7e8a6a.33aa441f.js  0d7e8a6a.63fe2a61.js  0d7e8a6a.92f29782.js  1169.8330dac7.js  1226.9ef220c8.js  1301.7ada4c7a.js  138e0e15.501c2e6b.js  138e0e15.646f86e7.js  138e0e15.e4cc4490.js  1513.a31d0dce.js  1550.f73a631a.js  1587.9f8e301f.js  165.2e926918.js  165.a9e0e478.js  17896441.4da33c3b.js  17896441.513d08c7.js  17896441.5297064a.js  1795.0790f622.js  1844.29e47fab.js  185f17d3.73d740a1.js  185f17d3.8e60ece4.js  185f17d3.99492cc7.js  185f17d3.c67d8ed6.js  185f17d3.e50fe109.js  185f17d3.fe42f9ee.js  189.7897a2f4.js  1947.ec54e682.js  1a4e3797.5f945af1.js  1a4e3797.6e03d30d.js  1a4e3797.7dc731ff.js  1a4e3797.eb053f16.js  1a5d8398.151b1ec5.js  1a5d8398.34293af2.js  1a5d8398.4092da5c.js  1a5d8398.568ecd58.js  1a5d8398.9ead7371.js  1a5d8398.bf47e439.js  1a5d8398.c14d1003.js  (+591 more)
ci/: load_verilua_env.sh  make_tools_wrapper.sh  package.sh  setup_centos_env.sh  setup_pixi_glibc.sh
docs/: index.html  index.md  index.mdx  navigation.mdx  wave_vpi_hex_str_x_state.md
docs-website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/getting-started/: data_structure.md  install.md  install.mdx  luajit_vs_standard_lua.mdx  multi_task.md  simple_hse_example.mdx  simple_hvl_example.md  simple_hvl_example.mdx  simple_wal_example.md  simple_wal_example.mdx
docs/how-to-guides/: call_c_functions.mdx  clock_driving.mdx  combinational_logic.mdx  common_lua_pitfalls.mdx  cross_stimulus_generation.mdx  emmylua_type_annotations.mdx  multi_clock_testing.mdx  oop_with_pl_class.mdx  simple_ut_env.md  simple_ut_env.mdx  write_reusable_component.md  write_reusable_component.mdx  write_xmake_lua.mdx
docs/navigation/: index.html
docs/reference/: await_time.mdx  bitvec.md  bitvec.mdx  cross.mdx  data_structure.md  data_structure.mdx  global_configuration.md  global_configuration.mdx  lua_utils.mdx  multi_task.md  multi_task.mdx  native_clock.mdx  queue.mdx  simulator_control.md  simulator_control.mdx  simulator_default_flags.mdx  slcp.md  slcp.mdx  special_env_variables.mdx  str_bits_utils.mdx  sv_builder.mdx  sva_generate.mdx  symbol_helper.mdx  type_expect.mdx  (+5 more)
libverilua/: Cargo.toml  build.rs  xmake.lua
libverilua/src/: complex_handle.rs  lib.rs  native_clock.rs  verilator_helper.rs  verilua_env.rs  vpi_access.rs  vpi_callback.rs
libverilua/src/utils/: idpool.rs  mod.rs
libverilua/src/vpi_access/: handle_getters.rs  hierarchy_collect.rs  meta_getters.rs  mod.rs  value_getters.rs  value_setters.rs
nix/: lsqlite3.nix  slang.nix  verilator-clang.nix  wave_vpi.nix
npins/: sources.json
scripts/: gen_register_edge_callback.py  gen_vl_config.py  merge_coverage.py  setvars.sh  testbench_gen.py  verilua_cfg.lua  verilua_init.py
search/: index.html  search_index.json
src/: lua_vpi.cpp  verilator_main.cpp
src/wave_vpi/wellen_impl/: Cargo.toml  default.nix
src/wave_vpi/wellen_impl/src/: lib.rs  vpi_user.rs
tests/: test_age_static_queue.lua  test_bit_vec.lua  test_bitvec.lua  test_cross.lua  test_cyclic_random.lua  test_hex_str_bits.lua  test_idpool.lua  test_libgmp.lua  test_logger.lua  test_lua_utils.lua  test_queue.lua  test_static_queue.lua  test_str_bits_utils.lua  test_sv_builder.lua  test_sva_gen.lua  test_symbol_helper_parse.lua  test_type_expect.lua  test_wighted_random.lua  xmake.lua
tools/: verilua_gen_cfg  verilua_init  verilua_run  vl-iverilog  vl-vcs  vl-vcs-dpi  vl-verilator  vl-verilator-dpi  vl-verilator-p
(+502 files in other folders)
