[package]
name = "libverilua"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
env_logger = "0.11.6"
figlet-rs = "0.1.5"
goblin = "0.9.3"
hashbrown = "0.15.3"
lazy_static = "1.5.0"
libc = "0.2.169"
log = "0.4.26"
# mlua = {version = "0.10.5", features = ["luajit52", "vendored"]}
mlua = {version = "0.10.5", features = ["luajit52"]}
num_enum = "0.7.3"
once_cell = "1.20.3"
paste = "1.0.15"
static_init = "1.0.3"
mimalloc = "0.1.46"
rand = "0.9.0"
smallvec = "1.14.0"
tabled = "0.18.0"
clap = { version = "4.5.32", features = ["derive"] } # used in verilua_prebuild
cpp = "0.5"
wildmatch = "2.4.0"

[lib]
name = "verilua"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "verilua_prebuild"
path = "src/lib.rs"
required-features = ["verilua_prebuild_bin"]

[features]
# default = ["dpi"]
dpi = ["mlua/send"]
verilator = []
iverilog = []
iverilog_vpi_mod = []
vcs = []
wave_vpi = []

debug = []
acc_time = []

opt_cb_task = []
merge_cb = ["opt_cb_task"]
chunk_task = ["opt_cb_task"]

verilua_prebuild_bin = []

[build-dependencies]
cc = {version = "1.2.15", features = ["parallel"]}
cpp_build = "0.5"
