[package]
name = "libverilua"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
env_logger = "0.11.8"
figlet-rs = "0.1.5"
goblin = "0.9.3"
hashbrown = "0.16.1"
lazy_static = "1.5.0"
libc = "0.2.180"
log = "0.4.29"
# mlua = {version = "0.11.6", features = ["luajit52", "vendored"]}
mlua = {version = "0.11.6", features = ["luajit52"]}
num_enum = "0.7.4"
once_cell = "1.21.3"
paste = "1.0.15"
static_init = "1.0.4"
mimalloc = {version = "0.1.48", features = ["v3"]}
rand = "0.9.2"
smallvec = "1.15.1"
tabled = "0.18.0"
cpp = "0.5"
wildmatch = "2.4.0"
fslock = "0.2.1"

[lib]
name = "verilua"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[features]
# default = ["dpi"]
dpi = ["mlua/send"]
verilator = []
iverilog = []
iverilog_vpi_mod = []
vcs = []
wave_vpi = []
nosim = []

verilator_inner_step_callback = []

debug = []
acc_time = []
inertial_put = [] # See https://github.com/cocotb/cocotb/pull/3861 for more details

opt_cb_task = []
merge_cb = ["opt_cb_task"]
chunk_task = ["opt_cb_task"]

promote_luajit_global = []

[build-dependencies]
cc = {version = "1.2.32", features = ["parallel"]}
cpp_build = "0.5"
