[package]
name = "wave_vpi_wellen_impl"
version = "0.1.0"
edition = "2024"

[dependencies]
wellen = { version = "0.19.0", features = ["serde1"] }
bytesize = "1.3.0"
indicatif = "0.17.8"
bytemuck = "1.16.0"
byteorder = "1.5.0"
serde = "1.0"
serde_yaml = "0.9.34"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

