[package]
name = "wave_vpi_wellen_impl"
version = "0.1.0"
edition = "2024"

[dependencies]
wellen = { version = "0.21.0", features = ["serde1"] }
indicatif = "0.17.8"
bytemuck = "1.16.0"
byteorder = "1.5.0"
serde = "1.0"
serde_yaml = "0.9.34"
rmp-serde = "1"
memmap2 = "0.9"
env_logger = "0.11.8"
log = "0.4.27"
static_init = "1.0.4"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
